--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?aqrob#1" target="_blank">首页</a> | <a href="https://d1b0mjr6ppvor4.cloudfront.net/1?jexlmu" target="_blank">动态网</a> | <a href="https://d2zvse34bag8ol.cloudfront.net/2?zxukkhl" target="_blank">大纪元</a> | <a href="https://d2aqxvnyguf0uq.cloudfront.net/4?kouexawxx" target="_blank">看中国</a> | <a href="https://d1ff3ajoaf61nd.cloudfront.net/pHh5q?qgghbeox" target="_blank">新生网</a> | <a href="https://d3dnxm84b62m8k.cloudfront.net/tktpt?oagytodd" target="_blank">阿波罗网</a> | <a href="https://d1x2hvndm8f89d.cloudfront.net/Mjpvu?mukmgh" target="_blank">干净世界</a> | <a href="https://d1b0mjr6ppvor4.cloudfront.net/10?sfwon" target="_blank">退党服务</a> | <a href="https://d2iiqnrx4rrboe.cloudfront.net/Rffqf?wxpnrxa" target="_blank">明慧广播</a> | <a href="https://dmt6yqw0je6jw.cloudfront.net/nw9Vn?rpkdh" target="_blank">传奇时代</a> | <a href="https://d2tkl2xkgbxyfv.cloudfront.net/AF9AG?jxtadxlq" target="_blank">新境界影视</a> | <a href="https://dp0r2i3ixve2v.cloudfront.net/zqMQA?rvjonfqj" target="_blank">文昭谈论</a> | <a href="https://d2n08tj75ohh5.cloudfront.net/7?xpkhwy" target="_blank">明慧</a></p><p><a href="https://d1d4q9enzm2lz3.cloudfront.net/9?ledlbno" target="_blank">大法</a> | <a href="https://dvucua6a0b85v.cloudfront.net/3?lkebeosj" target="_blank">新唐人</a> | <a href="https://d8jw662akk94j.cloudfront.net/obAhT?itblvwns" target="_blank">人民报</a> | <a href="https://d35iuueyr80mg8.cloudfront.net/xXNHu?bxdvayrs" target="_blank">放光明</a> | <a href="https://d3sh8rhxyvin24.cloudfront.net/5?cfhdxovw" target="_blank">新纪元</a> | <a href="https://d2esw86q58v8t7.cloudfront.net/6?nfkea" target="_blank">希望之声</a> | <a href="https://d324e5bfxb7dri.cloudfront.net/11?gevbsgo" target="_blank">无界网络</a> | <a href="https://d11leod1im7q2u.cloudfront.net/Pueji?yhlghvi" target="_blank">追查国际</a> | <a href="https://dhltq9qxjnmw2.cloudfront.net/16?jfkfcvoyt" target="_blank">明慧之窗</a> | <a href="https://dlph7fabhsbfp.cloudfront.net/LdvzZ?xgpnq" target="_blank">细语人生</a> | <a href="https://d1fejrztdgsube.cloudfront.net/fBn3r?shvjjyk" target="_blank">新世纪影视</a> | <a href="https://d2ktwgchvgcnzd.cloudfront.net/PUWMb?hskuy" target="_blank">江峰时刻</a> | <a href="https://dryak9kcfpt3j.cloudfront.net/8?ngjdpgpey" target="_blank">正见</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?nigoeyzt#1" target="_blank">首页</a> | <a href="https://djwddd4nnr0na.cloudfront.net/1?uieuyhy" target="_blank">动态网</a> | <a href="https://d2rum6kyy1zd7y.cloudfront.net/2?auivia" target="_blank">大纪元</a> | <a href="https://d1t2us6hq0fx1u.cloudfront.net/4?xcolx" target="_blank">看中国</a> | <a href="https://d37g5boc7rm625.cloudfront.net/pHh5q?yuibhw" target="_blank">新生网</a> | <a href="https://d239x61949z6p.cloudfront.net/tktpt?moycnjnp" target="_blank">阿波罗网</a> | <a href="https://d1cayv19uhqaei.cloudfront.net/Mjpvu?lnmfzlvp" target="_blank">干净世界</a> | <a href="https://d3l8osd9w9ntl9.cloudfront.net/10?tjtzm" target="_blank">退党服务</a> | <a href="https://d324e5bfxb7dri.cloudfront.net/Rffqf?otkzlobp" target="_blank">明慧广播</a> | <a href="https://d2s9nucg9xc8yr.cloudfront.net/nw9Vn?uzmepygu" target="_blank">传奇时代</a> | <a href="https://dnuodzs8nln8v.cloudfront.net/AF9AG?ajcaar" target="_blank">新境界影视</a> | <a href="https://dgk92ykceobaf.cloudfront.net/zqMQA?eprywmpvw" target="_blank">文昭谈论</a> | <a href="https://d78f5frq5siq8.cloudfront.net/7?xrgkgrpn" target="_blank">明慧</a></p><p><a href="https://d377tzsbzf1wvt.cloudfront.net/9?xwfswurqu" target="_blank">大法</a> | <a href="https://d324e5bfxb7dri.cloudfront.net/3?jjshcflpz" target="_blank">新唐人</a> | <a href="https://dqgl8k1bfvgsc.cloudfront.net/obAhT?xaeqcoqx" target="_blank">人民报</a> | <a href="https://djwddd4nnr0na.cloudfront.net/xXNHu?rkomr" target="_blank">放光明</a> | <a href="https://d2aqxvnyguf0uq.cloudfront.net/5?nmuff" target="_blank">新纪元</a> | <a href="https://d3gus727acem18.cloudfront.net/6?kbyoix" target="_blank">希望之声</a> | <a href="https://d3twnfu6dd6xpm.cloudfront.net/11?lejiuf" target="_blank">无界网络</a> | <a href="https://d1d4q9enzm2lz3.cloudfront.net/Pueji?axxvvln" target="_blank">追查国际</a> | <a href="https://dycmgeziwp90b.cloudfront.net/16?cdcbnmwf" target="_blank">明慧之窗</a> | <a href="https://d3a3umoypakbtm.cloudfront.net/LdvzZ?ozcjny" target="_blank">细语人生</a> | <a href="https://d1ed4zj8eeit74.cloudfront.net/fBn3r?orfyotskz" target="_blank">新世纪影视</a> | <a href="https://d1qenr1x5ix28c.cloudfront.net/PUWMb?rjdbmha" target="_blank">江峰时刻</a> | <a href="https://dh48pl2d5tlkv.cloudfront.net/8?sucdrqc" target="_blank">正见</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390934.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2024/07/id14287715-GettyImages-2147871369-320x200.jpg"><p align="center">极越汽车大裁员 中国电动车洗牌风暴来临？</p></a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390934.md#1" title="极越汽车大裁员 中国电动车洗牌风暴来临？""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14287715-GettyImages-2147871369-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390865.md#1" title="韩国会表决通过弹劾尹锡悦总统动议""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/12/id14390970-GettyImages-2189170105-320x200.jpg">&nbsp;</a>
@@ -13,16 +13,16 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390698.md#1" title="美议员要求苹果、谷歌准备1月19日禁TikTok""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/05/id14247620-681683-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389954.md#1" title="王友群：陈一新正在走周永康等的绝路""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/12/id14389955-20171220-SIJING-11-600x400-600x399-1-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>16分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390961.md#1">担忧遭到美国制裁？中海油将美资产售予英企</a><br>
-:clock8: <em>30分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390981.md#1">澳外长感谢共推海缆 台外交部：彰显伙伴关系</a><br>
-:clock8: <em>44分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390934.md#1">极越汽车大裁员 中国电动车洗牌风暴来临？</a><br>
-:clock8: <em>59分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390980.md#1">北约秘书长指中共霸凌 台外交部：合作捍卫和平</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390957.md#1">厦门大学女生遭霸凌受重伤 学生扬言维权</a><br>
+:clock8: <em>36分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390961.md#1">担忧遭到美国制裁？中海油将美资产售予英企</a><br>
+:clock8: <em>50分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390981.md#1">澳外长感谢共推海缆 台外交部：彰显伙伴关系</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390934.md#1">极越汽车大裁员 中国电动车洗牌风暴来临？</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390980.md#1">北约秘书长指中共霸凌 台外交部：合作捍卫和平</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390957.md#1">厦门大学女生遭霸凌受重伤 学生扬言维权</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390911.md#1">台经济部：投资台湾三大方案已逾785亿美元</a><br>
 :clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390865.md#1">韩国会表决通过弹劾尹锡悦总统动议</a><br>
-:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390921.md#1">枪杀联合健保CEO凶嫌或加快引渡 曼哈顿地检将接手</a><br>
-:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390923.md#1">纽约民选官员要求NYPD介入调查神秘无人机</a><br>
-:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390926.md#1">全球礼品卡诈骗激增 买前如何辨别篡改</a><br>
+:clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390921.md#1">枪杀联合健保CEO凶嫌或加快引渡 曼哈顿地检将接手</a><br>
+:clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390923.md#1">纽约民选官员要求NYPD介入调查神秘无人机</a><br>
+:clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390926.md#1">全球礼品卡诈骗激增 买前如何辨别篡改</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389628.md#1">海关署长俞建华猝死 其靠山被指是丁薛祥</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14390067.md#1">中共强制兵役登记 分析：恐惧“大变局”</a><br>
@@ -45,21 +45,21 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/23/12/28/n14145798.md#1">【图解】川普面临的法律挑战</a><br>
 <br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1">更多......</a></p></td><td VALIGN=TOP width="371">
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390414.md#1">袁红冰：中共军队两军官对抗调查 多人遭枪杀</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390934.md#1">极越汽车大裁员 中国电动车洗牌风暴来临？</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390869.md#1">美驻华大使人权日声明遭中共删除 引热议</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390835.md#1">人权律师促北京当局撤回终止涉外收养决定</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390342.md#1">北京全面推个人养老金  专家：又一次盘剥</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390706.md#1">260万个Stanley网红水杯被召回 均为中国制造</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389954.md#1">王友群：陈一新正在走周永康等的绝路</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390763.md#1">分析：川普发出一邀请 令中共陷窘境</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390706.md#1">260万个Stanley网红水杯被召回 均为中国制造</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390284.md#1">钟原：中共在经济会议上露出了什么马脚？</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390138.md#1">【翻墙必看】中共海关总署署长自杀 谜团重重</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390763.md#1">分析：川普发出一邀请 令中共陷窘境</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390451.md#1">前山西首富1.1亿资产被英国正式没收</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390698.md#1">美议员要求苹果、谷歌准备1月19日禁TikTok</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390390.md#1">掸封尘：推倒中共防火墙，功在美国，利在世界</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389996.md#1">川普：将递解非法入境外国人 重刑犯为主</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390097.md#1">江西万年县委书记毛奇被公诉 未提与李佩霞关系</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390761.md#1">夏洛山：中共主持五常会议  用口号制止核战争</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390908.md#1">韩国火鸡面热销全球 让家庭主妇变亿万富婆</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390790.md#1">范冰冰自曝未在香港置业 直呼“楼价好贵”</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390794.md#1">【菁英论坛】中共拍板大印钞 百万亿级海啸将临</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390760.md#1">睽违9年再接古装剧 胡歌有望饰演镖客一角?</a><br>
@@ -108,8 +108,8 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387732.md#1">【百年真相】毛泽东时代的红卫兵悲剧</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14388037.md#1">迎国际人权日 洛城集会抗议中共迫害人权</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14387875.md#1">王友群：中共的“新战略”只会加速其灭亡</a><br>
-<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://dvqvgqa685r7h.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://dvqvgqa685r7h.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://dvqvgqa685r7h.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://dvqvgqa685r7h.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://dvqvgqa685r7h.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://dvqvgqa685r7h.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://dvqvgqa685r7h.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://dvqvgqa685r7h.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://dvqvgqa685r7h.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://dvqvgqa685r7h.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://dvqvgqa685r7h.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://dvqvgqa685r7h.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://dvqvgqa685r7h.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://dvqvgqa685r7h.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://dvqvgqa685r7h.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://dvqvgqa685r7h.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://dvqvgqa685r7h.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://dvqvgqa685r7h.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://dvqvgqa685r7h.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://dvqvgqa685r7h.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://dvqvgqa685r7h.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://dvqvgqa685r7h.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://dvqvgqa685r7h.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://dvqvgqa685r7h.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://dvqvgqa685r7h.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://dvqvgqa685r7h.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 51,187</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d3ajrb50y85nrt.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d3ajrb50y85nrt.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d3ajrb50y85nrt.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d3ajrb50y85nrt.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d3ajrb50y85nrt.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d3ajrb50y85nrt.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d3ajrb50y85nrt.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d3ajrb50y85nrt.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d3ajrb50y85nrt.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d3ajrb50y85nrt.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d3ajrb50y85nrt.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d3ajrb50y85nrt.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d3ajrb50y85nrt.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d3ajrb50y85nrt.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d3ajrb50y85nrt.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d3ajrb50y85nrt.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d3ajrb50y85nrt.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d3ajrb50y85nrt.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d3ajrb50y85nrt.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d3ajrb50y85nrt.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d3ajrb50y85nrt.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d3ajrb50y85nrt.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d3ajrb50y85nrt.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d3ajrb50y85nrt.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d3ajrb50y85nrt.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d3ajrb50y85nrt.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 51,187</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
